# TaskSync-Gerenciador-de-Tarefas-CLI-API-REST

./: Cargo.toml  README.md
src/: api.rs  auth.rs  cli.rs  db.rs  main.rs  models.rs  websocket.rs
