[package]
name = "tasksync"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-actix-rustls", "sqlite"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
