[package]
name = "tasksync"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-rt = "2.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.5", features = ["sqlite", "macros", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "8.1"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio-tungstenite = "0.15"
chrono = "0.4"
dotenv = "0.15"
clap = "3.0"
